--- a/angular/subject.html
+++ b/angular/subject.html
@@ -35,7 +35,7 @@
             
             <div class="form-group ">
                 <label for="subjetc">Subject Name:</label>
-                <input type="text" class="form-control" ng-model="newsub.subName"placeholder="AddSubject">
+                <input type="text" class="form-control" ng-model="newsub.subName"placeholder="AddSubject" required/>
             </div>
 
             <div class="form-group col-md-6">
