--- a/angular/userindex.html
+++ b/angular/userindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html ng-app="myApplication">
 
 <head>
     <meta charset="UTF-8">
@@ -23,18 +23,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-     <!--  Chips   Angular Material Javascript now available via Google CDN; version 1.1.9 used here -->
-     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.js"></script> -->
-<!--     -->
-     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/md-chips-select@1.0.2/md-chips-select.css">
-     <script src = "https://cdn.jsdelivr.net/npm/md-chips-select@1.0.2/md-chips-select.js"></script> -->
-<!--     -->
-<!--md-chips-->
-<!-- <script type="text/javascript" src="/bower_components/angular/angular.js"></script>
 
-<script type="text/javascript" src="/bower_components/angular-chips/dist/angular-chips.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/bower_components/angular-chips/dist/main.css"> -->
-<!---->
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js">
      </script>
      <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js">
@@ -47,21 +36,12 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>  
      <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
-     <script src="app.js"></script>
-     <script src="./controller/subjectCtrl.js"></script>
-     <script src="./controller/topicCtrl.js"></script>
-     <script src="./controller/edittopicCtrl.js"></script>
-     <script src="./controller/quetsionCtrl.js"></script>
-     <script src="./controller/editqueCtrl.js"></script>
-     <script src="./controller/testTemCtrl.js"></script>
-     <script src="./controller/demoCtrl.js"></script>
-     <script src="./controller/edittestCtrl.js"></script>
-     <script src="./controller/assigntestCtrl.js"></script>
-     <!-- <script src="./controller/loginCtrl.js"></script>
+     <script src="userapp.js"></script>
+     <script src="./controller/loginCtrl.js"></script>
      <script src="./controller/listtestCrl.js"></script>
      <script src="./controller/service.js"></script>
      <script src="./controller/testCtrl.js"></script>
-     <script src="./controller/finishCtrl.js"></script> -->
+     <script src="./controller/finishCtrl.js"></script>
 
 </head>
 <style>
@@ -77,25 +57,13 @@
         </span>
         <ul class="navbar-nav">
 
-            <!-- <li class="nav-item">
-                <a ui-sref="#" ui-sref-active="active" class="nav-link" style="color:white">Home</a>
-            </li> -->
-            <li class="nav-item">
-                <a ui-sref="subject" ui-sref-active="active" class="nav-link" style="color:white">Add-Subject</a>
-            </li>
-            <li class="nav-item">
-                <a ui-sref="topic" ui-sref-active="active" class="nav-link" style="color:white">Add-Topic</a>
-            </li>
-            <li class="nav-item">
-                <a ui-sref="question" ui-sref-active="active" class="nav-link" style="color:white">Add-Qestions</a>
-            </li>
-            <li class="nav-item">
-                <a ui-sref="testtemp" ui-sref-active="active" class="nav-link" style="color:white">Add-Test</a>
-            </li>
-            <li class="nav-item">
-                <a ui-sref="assigntest" ui-sref-active="active" class="nav-link" style="color:white">Add Assign Test</a>
-            </li>
           
+            <li class="nav-item">
+                <a ui-sref="login" ui-sref-active="active" class="nav-link" style="color:white">Login</a>
+            </li>
+            <li class="nav-item">
+                    <a ui-sref="listtest" ui-sref-active="active" class="nav-link" style="color:white">List-Publish-Test</a>
+                </li>
                 <!-- <li class="nav-item">
                     <a ui-sref="demo" ui-sref-active="active" class="nav-link" style="color:white">Add Demo</a>
                 </li>
